The changes include updates to the App.scss file, adding new styles for MagentaA11y__main-content with padding variables and a responsive adjustment for mobile screens. In App.tsx, a SideNav component is now conditionally rendered based on the route, and a Breadcrumbs component was introduced. The AppContent component was created to handle layout logic separately from App. The content-display.scss file was updated to center align elements and ensure full width for __intro and __content. The criteria.scss file removed redundant padding variables and a mobile-specific padding rule. In criteria.tsx, the SideNav component was removed from inside the criteria-container, ensuring it is handled at a higher level in AppContent. The top-nav.tsx file changed the homepage link to / instead of /home, and top-nav.scss added a notification indicator for saved criteria. Finally, _color-tokens.scss introduced new CSS variables for breadcrumbs' text colors in both light and dark themes.

--- a/src/components/content-display/content-display.scss
+++ b/src/components/content-display/content-display.scss
@@ -16,6 +16,7 @@
 
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: var(--nav-display-gap);
   max-width: 1280px;
   margin: auto;
@@ -23,6 +24,7 @@
   &__intro {
     display: flex;
     flex-direction: column;
+    width: 100%;
     gap: var(--intro-gap);
     text-align: center;
     padding-bottom: var(--intro-padding-bottom);
@@ -43,6 +45,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--nav-display-content-gap);
+    width: 100%;
   }
 
   &__content-actions {
